# ckmeans

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  wasm_bench.js  wasm_example.html
.github/: dependabot.yml
.github/workflows/: pgo-release.yml  rust.yml
benches/: benchmark.rs  pgo_validation.rs
docs/superpowers/plans/: 2026-04-06-project-structure-cleanup.md
examples/: example.c
include/: header.h
scripts/: pgo-build.sh
src/: algo.rs  errors.rs  ffi.rs  lib.rs  wasm.rs
tools/: Cargo.toml  pgo_training.rs
