[package]
name = "ckmeans"
description = "A Rust implementation of Wang and Song's Ckmeans clustering algorithm"
version = "1.3.9"
edition = "2024"
license = "BlueOak-1.0.0"
repository = "https://github.com/urschrei/ckmeans"
documentation = "https://docs.rs/ckmeans"
readme = "README.md"
keywords = ["gis", "geo", "spatial", "clustering"]
autobenches = true
rust-version = "1.85"
categories = ["science::geo"]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
js-sys = "0.3.77"
libc = "0.2.174"
num-traits = "0.2.16"
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = "0.6.0"
rand = "0.9.1"
rand_distr = "0.5.1"

[build-dependencies]
cbindgen = { version = "0.29.0", default-features=false, optional = true }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "pgo_validation"
harness = false

# PGO training binary - not built by default
# Built only via 'cargo test --no-run --bin pgo_training'

[features]
headers = ["cbindgen"]
# Internal feature for benchmarking binaries - not for public use
__internal_benchmarking = []

[lib]
name = "ckmeans"
crate-type = ["rlib", "cdylib"]
test = true
doctest = true
doc = true

# Profile for generating PGO data
[profile.pgo-generate]
inherits = "release"
# Enable PGO instrumentation
opt-level = 3
lto = "fat"

# Profile for using PGO data
[profile.pgo-use]
inherits = "release"
# Maximum optimizations with PGO data
opt-level = 3
lto = "fat"
codegen-units = 1
